<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:attribute="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".profilActivity">


    <developer.shivam.crescento.CrescentoContainer
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="1dp"
        attribute:curvature="10dp"
        attribute:curvatureDirection="outward">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="1"
            android:src="@drawable/background_gradient"/>

        <!--<ImageButton-->
            <!--android:id="@+id/btn_back"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:background="@drawable/back"/>-->


        <TextView
            android:id="@+id/statusBarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="Detail"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:fontFamily="@font/breeserif_regular" />

    </developer.shivam.crescento.CrescentoContainer>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/background_gradient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photo_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#000000"
                    android:src="@drawable/foto"
                    android:elevation="1dp"/>


                <LinearLayout
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp"
                        app:contentPaddingTop="15dp"
                        app:contentPaddingRight="15dp"
                        app:contentPaddingLeft="15dp"
                        app:contentPaddingBottom="15dp"
                        app:cardCornerRadius="15dp"
                        app:cardBackgroundColor="#FFFFFF">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_nama"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="60dp"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/nama"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:textColor="#000000"/>

                            <TextView
                                android:id="@+id/txt_alamat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:drawableLeft="@drawable/lokasi"
                                android:text="@string/txt_alamat"
                                android:textSize="20sp"/>

                            <TextView
                                android:id="@+id/txt_bio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/txt_bio"
                                android:textSize="15sp"/>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/txt_umur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/txt_umur"
                        android:textSize="35sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/title_umur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_umur"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/top"
                        android:layout_marginTop="5dp"

                        android:background="@drawable/background_gradient"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:layout_alignLeft="@+id/top">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/email2" />

                        <TextView
                            android:id="@+id/title_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:text="@string/title_email"
                            android:textColor="@android:color/black"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="32dp"
                            android:background="#000000" />

                        <TextView
                            android:id="@+id/txt_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/txt_email"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/background_gradient"
                        android:layout_marginTop="20dp"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/phone"
                            android:layout_gravity="center_vertical"/>

                        <TextView
                            android:id="@+id/title_notelp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:text="@string/title_telp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="20dp"/>

                        <View
                            android:layout_width="2dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:background="#000000"/>

                        <TextView
                            android:id="@+id/txt_notelp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/txt_telp"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>